# my-rag-study

./: .env.example  .gitignore  README.md  get_emb.py  ipython_output.md  mini_rag.py  requirements.txt
DOCS/: pipIntheEnv
lessons/1.8 Conclusion/customer-service-agent/: README.md  pyproject.toml
lessons/1.8 Conclusion/customer-service-agent/docs/: LangGraph_智能客服路由系统_无代码实现蓝图.md  需求分析.md
lessons/1.8 Conclusion/customer-service-agent/src/config/: models.py
lessons/1.8 Conclusion/customer-service-agent/src/customer_service_agent.egg-info/: SOURCES.txt  top_level.txt
lessons/1.8 Conclusion/customer-service-agent/src/graph/: builder.py  router.py  state.py
lessons/1.8 Conclusion/customer-service-agent/src/nodes/: chitchatAgent.py  clarifyAgent.py  faqAgent.py  humanAgent.py  intentAnalyzerAgent.py  ragAgent.py
lessons/1.8 Conclusion/customer-service-agent/src/schemas/: intent.py
lessons/1.8 Conclusion/customer-service-agent/src/tests/: test1.py  test2.py
lessons/1.8 Conclusion/customer-service-agent/src/tests/invoke/: test1_invoke.py  test1_invoke_loop.py
lessons/1.8 Conclusion/customer-service-agent/src/tests/stream/: test1.py  test1_FAQ_stream-updates-双层循环输出.py  (+2 more)
lessons/1.8 Conclusion/gen-faq-basedExtraction/: pyproject.toml
lessons/1.8 Conclusion/gen-faq-basedExtraction/src/gen_faq_based_extraction.egg-info/: PKG-INFO
lessons/1.8 Conclusion/gen-faq-basedExtraction/src/prompts/: extraction
lessons/1.8 Conclusion/gen-faq-basedExtraction/src/schemas/: FAQparser.py
lessons/1.8 Conclusion/gen-faq-basedExtraction/src/tools/: list_files.py
(+73 files in other folders)
