[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "customer-service-agent"
version = "0.1.0"
description = "Lesson demo: LangGraph customer-service agent (local src layout)"
requires-python = ">=3.10"

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.packages.find]
where = ["src"]
