[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "gen-faq-based-extraction"
version = "0.1.0"
description = "Lesson demo: FAQ extraction pipeline (src layout)"
requires-python = ">=3.10"

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.packages.find]
where = ["src"]
